# pydbtools

./: .flake8  .gitignore  .pre-commit-config.yaml  .secrets.baseline  .yamllint  404.html  CHANGELOG.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: deploy-docs.yml  gh-deploy.yml  lint.yml  poetry-pypi-release.yml  pypi-release.yml  test-mojap-suite.yml  test.yaml
api/deprecated/: index.html
api/sql_render/: index.html
api/utils/: index.html
api/wrangler/: index.html
assets/stylesheets/: extra.css
docs/: README.md
docs/api/: deprecated.md  sql_render.md  utils.md  wrangler.md
docs/examples/: sql_templating.ipynb  tempfile.sql  testing_new_awswrangler.ipynb
docs/examples/data/: sales.csv
docs/guide/: overview.md
examples/: create_temporary_tables.ipynb  create_temporary_tables_from_sql_file.ipynb  creating_and_maintaining_database_tables_in_athena.ipynb  creating_and_maintaining_database_tables_in_athena_from_sql.ipynb  delete_databases_tables_and_partitions.ipynb  displaying_tables_example.ipynb  mojap_tools_demo.ipynb  show_tables_example.ipynb  simple_database_creation_manipulation.ipynb  sql_templating.ipynb  testing_new_awswrangler.ipynb  updating_db_with_deltas.ipynb
examples/create_temporary_tables/: index.html
examples/create_temporary_tables_from_sql_file/: index.html
examples/creating_and_maintaining_database_tables_in_athena/: index.html
examples/creating_and_maintaining_database_tables_in_athena_from_sql/: index.html
examples/data/: department.csv  employees.csv  init-data.csv  init-data.jsonl
examples/delete_databases_tables_and_partitions/: index.html
examples/displaying_tables_example/: index.html
examples/mojap_tools_demo/: index.html
examples/scripts/: create_dummy_deltas.py
examples/scripts/__init__/: index.html
examples/scripts/create_dummy_deltas/: index.html
examples/simple_database_creation_manipulation/: index.html
examples/sql_templating/: index.html
examples/testing_new_awswrangler/: index.html
examples/updating_db_with_deltas/: index.html
guide/overview/: index.html
pydbtools/: __init__.py  _sql_render.py  _wrangler.py  create_temp_table.py  get_athena_query_response.py  read_sql.py  utils.py  wrangler.py
search/: search_index.json
tests/: conftest.py  test_sql_parse.py  test_sql_render.py  test_tests.py  test_utils.py  test_wrangler.py
tests/data/: basic.sql  buggy.sql  templated.sql
tests/test_data_for_s3/: test_data_v201.json  test_data_v202.json
(+3 files in other folders)
