[tool]
[tool.poetry]
name = "pydbtools"
version = "5.5.8"
description = "A python package to query data via amazon athena and bring it into a pandas df using aws-wrangler."
license = "MIT"
authors = ["Karik Isichei <karik.isichei@digital.justice.gov.uk>"]
readme = "docs/README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
boto3 = ">=1.7.4"
sqlparse = "^0.4.4"
awswrangler = "^2.12.0"
pyarrow = ">=5.0.0"
Jinja2 = ">=3.1.0"
sql-metadata = "^2.3.0"
arrow-pd-parser = "^1.3.9"

[tool.poetry.group.dev.dependencies]
pytest = ">=6.1"
toml = "^0.10"
pre-commit = ">=3.3.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-tech-docs-template = "0.0.25"
mdx-include = "^1.4.2"
mkdocstrings-python = "^1.2.0"
mkdocs-jupyter = "^0.24.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
