[project]
name = "pydbtools"
version = "5.7.1"
description = "A python package to query data via amazon athena and bring it into a pandas df using aws-wrangler."
readme = "README.md"
license = {text = "MIT"}

authors = [
    {name = "Karik Isichei", email = "karik.isichei@digital.justice.gov.uk"},
]

requires-python = "<4.0,>=3.10"
dependencies = [
    "boto3>=1.7.4",
    "sqlparse>=0.5.0",
    "awswrangler>=2.12.0",
    "pyarrow>=14.0.0",
    "Jinja2>=3.1.0",
    "sql-metadata<3.0.0,>=2.3.0",
    "arrow-pd-parser>=1.3.9",
]

[dependency-groups]
dev = [
    "pytest>=6.1",
    "toml<1.0,>=0.10",
    "pre-commit>=3.3.2",
]
docs = [
    "mkdocs-tech-docs-template==0.1.2",
    "mdx-include<2.0.0,>=1.4.2",
    "mkdocstrings-python<2.0.0,>=1.2.0",
    "mkdocs-jupyter<1.0.0,>=0.24.2",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
